Fix translation text

--- a/locales/bg-BG/translation.json
+++ b/locales/bg-BG/translation.json
@@ -403,8 +403,8 @@
   "Useful for miners or DeFi use.": "Полезно за копачи или DeFi употреба.",
   "Value today": "Value today",
   "Version": "Версия",
-  "Version {{ newVersion }} is available. Click \"Update\" to avoid any issues with wallet.": "Налична е версия {{ newVersion }}. Кликнете върху \"Актуализиране\" за да избегнете проблеми с портфейла.",
-  "Version {{ newVersion }} is available. Please, download it and install it to avoid any issues with wallet.": "Version {{ newVersion }} is available. Please, download it and install it to avoid any issues with wallet.",
+  "Version {{ newVersion }} is available. Click \"Update\" to avoid any issues with the wallet.": "Налична е версия {{ newVersion }}. Кликнете върху \"Актуализиране\" за да избегнете проблеми с портфейла.",
+  "Version {{ newVersion }} is available. Please, download it and install it to avoid any issues with the wallet.": "Version {{ newVersion }} is available. Please, download it and install it to avoid any issues with the wallet.",
   "Wallet": "Портфейл",
   "Wallet list": "Списък на портфейлите",
   "Wallet name": "Име на портфейл",
