--- a/locales/de-DE/translation.json
+++ b/locales/de-DE/translation.json
@@ -403,8 +403,8 @@
   "Useful for miners or DeFi use.": "Nützlich für Miner oder DeFi.",
   "Value today": "Value today",
   "Version": "Version",
-  "Version {{ newVersion }} is available. Click \"Update\" to avoid any issues with wallet.": "Version {{ newVersion }} ist verfügbar. Bitte laden Sie sie herunter und installieren Sie diese, um Probleme mit der Wallet zu vermeiden.",
-  "Version {{ newVersion }} is available. Please, download it and install it to avoid any issues with wallet.": "Version {{ newVersion }} ist verfügbar. Bitte laden Sie sie herunter und installieren Sie sie, um Probleme mit der Brieftasche zu vermeiden.",
+  "Version {{ newVersion }} is available. Click \"Update\" to avoid any issues with the wallet.": "Version {{ newVersion }} ist verfügbar. Bitte laden Sie sie herunter und installieren Sie diese, um Probleme mit der Wallet zu vermeiden.",
+  "Version {{ newVersion }} is available. Please, download it and install it to avoid any issues with the wallet.": "Version {{ newVersion }} ist verfügbar. Bitte laden Sie sie herunter und installieren Sie sie, um Probleme mit der Brieftasche zu vermeiden.",
   "Wallet": "Wallet",
   "Wallet list": "Walletliste",
   "Wallet name": "Walletname",
