--- a/locales/en-US/translation.json
+++ b/locales/en-US/translation.json
@@ -401,8 +401,8 @@
   "Useful for miners or DeFi use.": "Useful for miners or DeFi use.",
   "Value today": "Value today",
   "Version": "Version",
-  "Version {{ newVersion }} is available. Click \"Update\" to avoid any issues with wallet.": "Version {{ newVersion }} is available. Click \"Update\" to avoid any issues with wallet.",
-  "Version {{ newVersion }} is available. Please, download it and install it to avoid any issues with wallet.": "Version {{ newVersion }} is available. Please, download it and install it to avoid any issues with wallet.",
+  "Version {{ newVersion }} is available. Click \"Update\" to avoid any issues with the wallet.": "Version {{ newVersion }} is available. Click \"Update\" to avoid any issues with the wallet.",
+  "Version {{ newVersion }} is available. Please, download it and install it to avoid any issues with the wallet.": "Version {{ newVersion }} is available. Please, download it and install it to avoid any issues with the wallet.",
   "Wallet": "Wallet",
   "Wallet list": "Wallet list",
   "Wallet name": "Wallet name",
