--- a/locales/es-ES/translation.json
+++ b/locales/es-ES/translation.json
@@ -403,8 +403,8 @@
   "Useful for miners or DeFi use.": "Útil para mineros o uso DeFi.",
   "Value today": "Value today",
   "Version": "Versión",
-  "Version {{ newVersion }} is available. Click \"Update\" to avoid any issues with wallet.": "La versión {{ newVersion }} está disponible. Haga clic en \"Actualizar\" para evitar problemas con la billetera.",
-  "Version {{ newVersion }} is available. Please, download it and install it to avoid any issues with wallet.": "Version {{ newVersion }} is available. Please, download it and install it to avoid any issues with wallet.",
+  "Version {{ newVersion }} is available. Click \"Update\" to avoid any issues with the wallet.": "La versión {{ newVersion }} está disponible. Haga clic en \"Actualizar\" para evitar problemas con la billetera.",
+  "Version {{ newVersion }} is available. Please, download it and install it to avoid any issues with the wallet.": "Version {{ newVersion }} is available. Please, download it and install it to avoid any issues with the wallet.",
   "Wallet": "Billetera",
   "Wallet list": "Lista de billeteras",
   "Wallet name": "Nombre de la billetera",
