--- a/locales/fr-FR/translation.json
+++ b/locales/fr-FR/translation.json
@@ -403,8 +403,8 @@
   "Useful for miners or DeFi use.": "Utile pour les mineurs ou l'usage DeFi.",
   "Value today": "Valeur aujourd'hui",
   "Version": "Version",
-  "Version {{ newVersion }} is available. Click \"Update\" to avoid any issues with wallet.": "La version {{ newVersion }} est disponible. Cliquez sur \"Mettre à jour\" afin d'éviter tout problème de fonctionnement.",
-  "Version {{ newVersion }} is available. Please, download it and install it to avoid any issues with wallet.": "La version {{ newVersion }} est disponible. Téléchargez et installez la afin d'éviter tout problème de fonctionnement.",
+  "Version {{ newVersion }} is available. Click \"Update\" to avoid any issues with the wallet.": "La version {{ newVersion }} est disponible. Cliquez sur \"Mettre à jour\" afin d'éviter tout problème de fonctionnement.",
+  "Version {{ newVersion }} is available. Please, download it and install it to avoid any issues with the wallet.": "La version {{ newVersion }} est disponible. Téléchargez et installez la afin d'éviter tout problème de fonctionnement.",
   "Wallet": "Portefeuille",
   "Wallet list": "Liste des portefeuilles",
   "Wallet name": "Nom du portefeuille",
