--- a/locales/id-ID/translation.json
+++ b/locales/id-ID/translation.json
@@ -403,8 +403,8 @@
   "Useful for miners or DeFi use.": "Berguna untuk penambang atau penggunaan DeFi.",
   "Value today": "Value today",
   "Version": "Versi",
-  "Version {{ newVersion }} is available. Click \"Update\" to avoid any issues with wallet.": "Versi {{ newVersion }} telah tersedia. Klik \"Perbarui\" untuk menghindari masalah dompet.",
-  "Version {{ newVersion }} is available. Please, download it and install it to avoid any issues with wallet.": "Version {{ newVersion }} is available. Please, download it and install it to avoid any issues with wallet.",
+  "Version {{ newVersion }} is available. Click \"Update\" to avoid any issues with the wallet.": "Versi {{ newVersion }} telah tersedia. Klik \"Perbarui\" untuk menghindari masalah dompet.",
+  "Version {{ newVersion }} is available. Please, download it and install it to avoid any issues with the wallet.": "Version {{ newVersion }} is available. Please, download it and install it to avoid any issues with the wallet.",
   "Wallet": "Dompet",
   "Wallet list": "Daftar dompet",
   "Wallet name": "Nama dompet",
