--- a/locales/pt-PT/translation.json
+++ b/locales/pt-PT/translation.json
@@ -403,8 +403,8 @@
   "Useful for miners or DeFi use.": "Útil para os mineradores ou uso DeFi.",
   "Value today": "Value today",
   "Version": "Versão",
-  "Version {{ newVersion }} is available. Click \"Update\" to avoid any issues with wallet.": "A versão {{ newVersion }} está disponível. Clique em \"Atualizar\" para evitar qualquer problema com a carteira.",
-  "Version {{ newVersion }} is available. Please, download it and install it to avoid any issues with wallet.": "Version {{ newVersion }} is available. Please, download it and install it to avoid any issues with wallet.",
+  "Version {{ newVersion }} is available. Click \"Update\" to avoid any issues with the wallet.": "A versão {{ newVersion }} está disponível. Clique em \"Atualizar\" para evitar qualquer problema com a carteira.",
+  "Version {{ newVersion }} is available. Please, download it and install it to avoid any issues with the wallet.": "Version {{ newVersion }} is available. Please, download it and install it to avoid any issues with the wallet.",
   "Wallet": "Carteira",
   "Wallet list": "Lista de carteiras",
   "Wallet name": "Nome da carteira",
