--- a/locales/ru-RU/translation.json
+++ b/locales/ru-RU/translation.json
@@ -403,8 +403,8 @@
   "Useful for miners or DeFi use.": "Пригодится для майнеров или для использования в DeFi.",
   "Value today": "Value today",
   "Version": "Версия",
-  "Version {{ newVersion }} is available. Click \"Update\" to avoid any issues with wallet.": "Версия {{ newVersion }} уже доступна. Нажмите, \"Обновить\", чтобы избежать проблем с кошельком.",
-  "Version {{ newVersion }} is available. Please, download it and install it to avoid any issues with wallet.": "Version {{ newVersion }} is available. Please, download it and install it to avoid any issues with wallet.",
+  "Version {{ newVersion }} is available. Click \"Update\" to avoid any issues with the wallet.": "Версия {{ newVersion }} уже доступна. Нажмите, \"Обновить\", чтобы избежать проблем с кошельком.",
+  "Version {{ newVersion }} is available. Please, download it and install it to avoid any issues with the wallet.": "Version {{ newVersion }} is available. Please, download it and install it to avoid any issues with the wallet.",
   "Wallet": "Кошелек",
   "Wallet list": "Список кошельков",
   "Wallet name": "Имя кошелька",
