--- a/locales/tr-TR/translation.json
+++ b/locales/tr-TR/translation.json
@@ -403,8 +403,8 @@
   "Useful for miners or DeFi use.": "Madenciler ya da DeFi kullanımı için faydalıdır.",
   "Value today": "Value today",
   "Version": "Sürüm",
-  "Version {{ newVersion }} is available. Click \"Update\" to avoid any issues with wallet.": "{{ newVersion }} sürümü mevcut. Cüzdan ile ilgili sorun yaşamamak için \"Güncelle\" kısmına tıklayın.",
-  "Version {{ newVersion }} is available. Please, download it and install it to avoid any issues with wallet.": "Version {{ newVersion }} is available. Please, download it and install it to avoid any issues with wallet.",
+  "Version {{ newVersion }} is available. Click \"Update\" to avoid any issues with the wallet.": "{{ newVersion }} sürümü mevcut. Cüzdan ile ilgili sorun yaşamamak için \"Güncelle\" kısmına tıklayın.",
+  "Version {{ newVersion }} is available. Please, download it and install it to avoid any issues with the wallet.": "Version {{ newVersion }} is available. Please, download it and install it to avoid any issues with the wallet.",
   "Wallet": "Cüzdan",
   "Wallet list": "Cüzdan listesi",
   "Wallet name": "Cüzdan ismi",
