--- a/locales/vi-VN/translation.json
+++ b/locales/vi-VN/translation.json
@@ -403,8 +403,8 @@
   "Useful for miners or DeFi use.": "Hữu ích cho thợ đào (miner) hoặc sử dụng DeFi.",
   "Value today": "Value today",
   "Version": "Phiên bản",
-  "Version {{ newVersion }} is available. Click \"Update\" to avoid any issues with wallet.": "Phiên bản {{ newVersion }} vừa mới được phát hành. Vui lòng nhấn \"Cập nhật\" để khắc phục những lỗi đang hiện có.",
-  "Version {{ newVersion }} is available. Please, download it and install it to avoid any issues with wallet.": "Phiên bản {{ newVersion }} vừa mới được phát hành. Vui lòng tải về và cài đặt để khắc phục các lỗi hiện đang có.",
+  "Version {{ newVersion }} is available. Click \"Update\" to avoid any issues with the wallet.": "Phiên bản {{ newVersion }} vừa mới được phát hành. Vui lòng nhấn \"Cập nhật\" để khắc phục những lỗi đang hiện có.",
+  "Version {{ newVersion }} is available. Please, download it and install it to avoid any issues with the wallet.": "Phiên bản {{ newVersion }} vừa mới được phát hành. Vui lòng tải về và cài đặt để khắc phục các lỗi hiện đang có.",
   "Wallet": "Ví",
   "Wallet list": "Danh sách ví",
   "Wallet name": "Tên ví",
