--- a/locales/ru-RU/translation.json
+++ b/locales/ru-RU/translation.json
@@ -226,7 +226,7 @@
   "Tokens to issue (optional)": "Токены для выпуска (необязательно)",
   "Gas": "Газ",
   "Review": "Обзор",
-  "The group of the selected address ({{ addressGroup }}) does not match the group required by WalletConnect ({{ walletConnectGroup }})": "Группа выбранного адреса ({{ addressGroup }}) не совпадает с группой, требуемой ({{ walletConnectGroup }})",
+  "The group of the selected address ({{ addressGroup }}) does not match the group required by WalletConnect ({{ walletConnectGroup }})": "Группа ({{ addressGroup }}) выбранного адреса не совпадает с группой, требуемой ({{ walletConnectGroup }})",
   "Could not pair with WalletConnect": "Не удалось выполнить сопряжение с WalletConnect",
   "WalletConnect error": "Ошибка WalletConnect",
   "Try again": "Попробуйте снова",
@@ -276,7 +276,7 @@
   "Anyone with your private keys can steal any assets held in your addresses.": "Любой человек, который владеет вашими закрытыми ключами, может украсть любые активы, хранящиеся на ваших адресах.",
   "Asset": "Актив",
   "Assets": "Активы",
-  "Browse your transaction history. Execute new transfers easily.": "Просматривайте вашу историю транзакций. Легко выполняйте новые переводы.",
+  "Browse your transaction history. Execute new transfers easily.": "Просматривайте вашу историю транзакций. С легкостью выполняйте новые переводы.",
   "Bytecode": "Байткод",
   "Change wallet name": "Изменить имя кошелька",
   "Choose a contact": "Выберите контакт",
@@ -361,7 +361,7 @@
   "Select all": "Выбрать все",
   "Select an asset": "Выбрать актив",
   "Select assets": "Выбрать активы",
-  "Select directions": "Выберите пути",
+  "Select directions": "Выбрать пути",
   "Select the address to receive funds to.": "Выберите адрес для получения средств.",
   "Send locked assets": "Отправить заблокированные активы",
   "Set as the default address": "Сделать адресом по умолчанию",
