--- a/locales/en-US/translation.json
+++ b/locales/en-US/translation.json
@@ -433,5 +433,6 @@
   "Your CSV file is being compiled in the background.": "Your CSV file is being compiled in the background.",
   "Your Wallet": "Your Wallet",
   "{{ amount }} words entered": "{{ amount }} words entered",
-  "{{ number }} selected": "{{ number }} selected"
+  "{{ number }} selected": "{{ number }} selected",
+  "No NFTs found.": "No NFTs found."
 }
