--- a/locales/en-US/translation.json
+++ b/locales/en-US/translation.json
@@ -434,5 +434,7 @@
   "Your Wallet": "Your Wallet",
   "{{ amount }} words entered": "{{ amount }} words entered",
   "{{ number }} selected": "{{ number }} selected",
-  "No NFTs found.": "No NFTs found."
+  "No NFTs found.": "No NFTs found.",
+  "Disclaimer": "Disclaimer",
+  "The wallet is developed in English.<br />Translations in other languages are provided by the Alephium community.<br />In case of doubt, always refer to the English version.": "The wallet is developed in English.<br />Translations in other languages are provided by the Alephium community.<br />In case of doubt, always refer to the English version."
 }
