--- a/locales/en-US/translation.json
+++ b/locales/en-US/translation.json
@@ -149,8 +149,8 @@
   "Features for developers only": "Features for developers only",
   "Fee": "Fee",
   "For mining or DeFi use.": "For mining or DeFi use.",
-  "From": "From",
   "from": "from",
+  "From": "From",
   "From address": "From address",
   "Gas": "Gas",
   "Gas amount": "Gas amount",
@@ -263,6 +263,8 @@
   "Previous year": "Previous year",
   "Private key copied!": "Private key copied!",
   "Private key export": "Private key export",
+  "Proxy address": "Proxy address",
+  "Proxy port": "Proxy port",
   "Raw amount": "Raw amount",
   "Ready!": "Ready!",
   "Receive": "Receive",
@@ -357,8 +359,8 @@
   "This year": "This year",
   "Time period": "Time period",
   "Timestamp": "Timestamp",
-  "To": "To",
   "to": "to",
+  "To": "To",
   "To address": "To address",
   "To remove this address from being the default address, you must set another one as default first.": "To remove this address from being the default address, you must set another one as default first.",
   "Toggle discreet mode (hide amounts).": "Toggle discreet mode (hide amounts).",
