--- a/locales/pt-PT/translation.json
+++ b/locales/pt-PT/translation.json
@@ -426,5 +426,7 @@
   "Your addresses": "Your addresses",
   "Your CSV file has been generated successfully.": "Your CSV file has been generated successfully.",
   "Your CSV file is being compiled in the background.": "Your CSV file is being compiled in the background.",
-  "Your Wallet": "A sua carteira"
+  "Your Wallet": "A sua carteira",
+  "Proxy address": "Proxy address",
+  "Proxy port": "Proxy port"
 }
