--- a/locales/vi-VN/translation.json
+++ b/locales/vi-VN/translation.json
@@ -426,5 +426,7 @@
   "Your addresses": "Your addresses",
   "Your CSV file has been generated successfully.": "Your CSV file has been generated successfully.",
   "Your CSV file is being compiled in the background.": "Your CSV file is being compiled in the background.",
-  "Your Wallet": "Ví của bạn"
+  "Your Wallet": "Ví của bạn",
+  "Proxy address": "Proxy address",
+  "Proxy port": "Proxy port"
 }
