--- a/locales/en-US/translation.json
+++ b/locales/en-US/translation.json
@@ -434,5 +434,6 @@
   "Your Wallet": "Your Wallet",
   "{{ amount }} words entered": "{{ amount }} words entered",
   "{{ number }} selected": "{{ number }} selected",
-  "No NFTs found.": "No NFTs found."
+  "No NFTs found.": "No NFTs found.",
+  "Address unknown tokens": "Address unknown tokens"
 }
