--- a/locales/bg-BG/translation.json
+++ b/locales/bg-BG/translation.json
@@ -434,5 +434,6 @@
   "Your addresses": "Your addresses",
   "Your CSV file has been generated successfully.": "Your CSV file has been generated successfully.",
   "Your CSV file is being compiled in the background.": "Your CSV file is being compiled in the background.",
-  "Your Wallet": "Вашият портфейл"
+  "Your Wallet": "Вашият портфейл",
+  "Address unknown tokens": "Address unknown tokens"
 }
