--- a/locales/de-DE/translation.json
+++ b/locales/de-DE/translation.json
@@ -434,5 +434,6 @@
   "Your addresses": "Ihre Adressen",
   "Your CSV file has been generated successfully.": "Your CSV file has been generated successfully.",
   "Your CSV file is being compiled in the background.": "Your CSV file is being compiled in the background.",
-  "Your Wallet": "Ihre Wallet"
+  "Your Wallet": "Ihre Wallet",
+  "Address unknown tokens": "Address unknown tokens"
 }
