--- a/locales/tr-TR/translation.json
+++ b/locales/tr-TR/translation.json
@@ -434,5 +434,6 @@
   "Your addresses": "Your addresses",
   "Your CSV file has been generated successfully.": "Your CSV file has been generated successfully.",
   "Your CSV file is being compiled in the background.": "Your CSV file is being compiled in the background.",
-  "Your Wallet": "Cüzdanınız"
+  "Your Wallet": "Cüzdanınız",
+  "Address unknown tokens": "Address unknown tokens"
 }
