Tweak Badge, use compact version for experimental badge

--- a/locales/de-DE/translation.json
+++ b/locales/de-DE/translation.json
@@ -439,5 +439,6 @@
   "Your CSV file has been generated successfully.": "Your CSV file has been generated successfully.",
   "Your CSV file is being compiled in the background.": "Your CSV file is being compiled in the background.",
   "Your Wallet": "Ihre Wallet",
-  "Address unknown tokens": "Address unknown tokens"
+  "Address unknown tokens": "Address unknown tokens",
+  "Experimental": "Experimental"
 }
