--- a/locales/ru-RU/translation.json
+++ b/locales/ru-RU/translation.json
@@ -439,5 +439,6 @@
   "Your CSV file has been generated successfully.": "Ваш CSV-файл был успешно создан.",
   "Your CSV file is being compiled in the background.": "Ваш CSV-файл формируется в фоновом режиме.",
   "Your Wallet": "Ваш кошелек",
-  "Address unknown tokens": "Address unknown tokens"
+  "Address unknown tokens": "Address unknown tokens",
+  "Experimental": "Experimental"
 }
