--- a/locales/vi-VN/translation.json
+++ b/locales/vi-VN/translation.json
@@ -439,5 +439,6 @@
   "Your CSV file has been generated successfully.": "Tệp tin CSV của bạn đã được tạo thành công.",
   "Your CSV file is being compiled in the background.": "Tệp tin CSV của bạn đang được soạn trong nền.",
   "Your Wallet": "Ví của bạn",
-  "Address unknown tokens": "Address unknown tokens"
+  "Address unknown tokens": "Address unknown tokens",
+  "Experimental": "Experimental"
 }
