--- a/locales/en-US/translation.json
+++ b/locales/en-US/translation.json
@@ -443,5 +443,11 @@
   "The wallet is developed in English.<br />Translations in other languages are provided by the Alephium community.<br />In case of doubt, always refer to the English version.": "The wallet is developed in English.<br />Translations in other languages are provided by the Alephium community.<br />In case of doubt, always refer to the English version.",
   "Additionally, {{ amount }} ALPH needs to be sent. Click here for more info.": "Additionally, {{ amount }} ALPH needs to be sent. Click here for more info.",
   "Address unknown tokens": "Address unknown tokens",
-  "Experimental": "Experimental"
+  "Experimental": "Experimental",
+  "Public key": "Public key",
+  "Private key": "Private key",
+  "Address keys export": "Address keys export",
+  "Public key copied!": "Public key copied!",
+  "Could not copy public key.": "Could not copy public key.",
+  "Copy the keys of an address.": "Copy the keys of an address."
 }
