--- a/locales/fr-FR/translation.json
+++ b/locales/fr-FR/translation.json
@@ -58,7 +58,6 @@
   "Change wallet name": "Changer le nom du portefeuille",
   "Check": "Vérifier",
   "Choose a contact": "Choisir un contact",
-  "Click on an address to copy its private key.": "Cliquez sur une adresse pour copier sa clé privée.",
   "Click to deactivate discreet mode": "Click to deactivate discreet mode",
   "Click to see less": "Cliquez pour voir moins",
   "Click to see more": "Cliquez pour voir plus",
@@ -267,7 +266,6 @@
   "Please, generate a new address in group {{ group }} first.": "Merci de générer une nouvelle adresse dans le group {{ group }} d'abord.",
   "Previous year": "Année précédente",
   "Private key copied!": "Clé privée copiée !",
-  "Private key export": "Export de clé privée",
   "Proxy address": "Proxy address",
   "Proxy port": "Proxy port",
   "Raw amount": "Montant brut",
@@ -443,5 +441,11 @@
   "Your Wallet": "Votre portefeuille",
   "Additionally, {{ amount }} ALPH needs to be sent. Click here for more info.": "Additionally, {{ amount }} ALPH needs to be sent. Click here for more info.",
   "Address unknown tokens": "Address unknown tokens",
-  "Experimental": "Experimental"
+  "Experimental": "Experimental",
+  "Public key": "Public key",
+  "Private key": "Private key",
+  "Address keys export": "Address keys export",
+  "Public key copied!": "Public key copied!",
+  "Could not copy public key.": "Could not copy public key.",
+  "Copy the keys of an address.": "Copy the keys of an address."
 }
